force-app/main/default/objects/WorkExchange__c/WorkExchange__c.object-meta.xml
<CustomObject>
    <label>連携用オブジェクト</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>