force-app/main/default/objects/WorkExchange__c/fields/AfterDocuments_CompleteCheck__c.field-meta.xml
<CustomField>
    <fullName>AfterDocuments_CompleteCheck__c</fullName>
    <label>後処理完了確認日</label>
    <type>Date</type>
</CustomField>