force-app/main/default/objects/WorkExchange__c/fields/Airbag__c.field-meta.xml
<CustomField>
    <fullName>Airbag__c</fullName>
    <label>エアバッグ展開</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ない</fullName>
            </value>
            <value>
                <fullName>ある</fullName>
            </value>
            <value>
                <fullName>不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>