force-app/main/default/objects/WorkExchange__c/fields/AirbagPosition__c.field-meta.xml
<CustomField>
    <fullName>AirbagPosition__c</fullName>
    <label>エアバッグ位置</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>運転席</fullName>
            </value>
            <value>
                <fullName>助手席</fullName>
            </value>
            <value>
                <fullName>サイド</fullName>
            </value>
            <value>
                <fullName>カーテン</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>