force-app/main/default/objects/WorkExchange__c/fields/Auction_PickupRemarks_hs__c.field-meta.xml
<CustomField>
    <fullName>Auction_PickupRemarks_hs__c</fullName>
    <label>オークション掲載引取備考</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>