force-app/main/default/objects/WorkExchange__c/fields/CallAPhase__c.field-meta.xml
<CustomField>
    <fullName>CallAPhase__c</fullName>
    <label>コールA商談フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ア待ち</fullName>
            </value>
            <value>
                <fullName>ア済み</fullName>
            </value>
            <value>
                <fullName>売契待ち</fullName>
            </value>
            <value>
                <fullName>確定待ち</fullName>
            </value>
            <value>
                <fullName>日程調整中</fullName>
            </value>
            <value>
                <fullName>書類待ち</fullName>
            </value>
            <value>
                <fullName>振込待ち</fullName>
            </value>
            <value>
                <fullName>出品待ち</fullName>
            </value>
            <value>
                <fullName>後処理待ち</fullName>
            </value>
            <value>
                <fullName>全完了</fullName>
            </value>
            <value>
                <fullName>キャンセル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>