force-app/main/default/objects/WorkExchange__c/fields/CancelDate__c.field-meta.xml
<CustomField>
    <fullName>CancelDate__c</fullName>
    <description>買取受付[CancellationDate__c]</description>
    <label>キャンセル日</label>
    <type>Date</type>
</CustomField>