force-app/main/default/objects/WorkExchange__c/fields/Cancellation_reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_reason__c</fullName>
    <label>クローズ理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>案件重複</fullName>
            </value>
            <value>
                <fullName>別人</fullName>
            </value>
            <value>
                <fullName>使われていないアナ</fullName>
            </value>
            <value>
                <fullName>概算・時期未定（値付けに確認）</fullName>
            </value>
            <value>
                <fullName>値合わず</fullName>
            </value>
            <value>
                <fullName>連絡付かず</fullName>
            </value>
            <value>
                <fullName>商談前買取不可</fullName>
            </value>
            <value>
                <fullName>乗り続け</fullName>
            </value>
            <value>
                <fullName>商談後他社売</fullName>
            </value>
            <value>
                <fullName>契約後キャンセル</fullName>
            </value>
            <value>
                <fullName>その他（経緯入力必須）</fullName>
            </value>
            <value>
                <fullName>営業A連携後キャンセル</fullName>
            </value>
            <value>
                <fullName>会員都合キャンセル</fullName>
            </value>
            <value>
                <fullName>営業A連携前キャンセル</fullName>
            </value>
            <value>
                <fullName>買取不可</fullName>
            </value>
            <value>
                <fullName>他社売却済</fullName>
                <isActive>false</isActive>
                <label>他社売却済</label>
            </value>
            <value>
                <fullName>概算（値指しに確認）</fullName>
                <isActive>false</isActive>
                <label>概算（値指しに確認）</label>
            </value>
            <value>
                <fullName>現金以外不可</fullName>
                <isActive>false</isActive>
                <label>現金以外不可</label>
            </value>
            <value>
                <fullName>連絡つかず</fullName>
                <isActive>false</isActive>
                <label>連絡つかず</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>