force-app/main/default/objects/WorkExchange__c/fields/CancellationPenalty__c.field-meta.xml
<CustomField>
    <fullName>CancellationPenalty__c</fullName>
    <label>キャンペナ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>請求なし</fullName>
            </value>
            <value>
                <fullName>請求要</fullName>
            </value>
            <value>
                <fullName>請求済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>