force-app/main/default/objects/WorkExchange__c/fields/CancelReason__c.field-meta.xml
<CustomField>
    <fullName>CancelReason__c</fullName>
    <label>キャンセル理由</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>修理の為</fullName>
            </value>
            <value>
                <fullName>他社</fullName>
            </value>
            <value>
                <fullName>全損の為</fullName>
            </value>
            <value>
                <fullName>依頼元不成約の為</fullName>
            </value>
            <value>
                <fullName>オークション</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>