force-app/main/default/objects/WorkExchange__c/fields/CarTypes__c.field-meta.xml
<CustomField>
    <fullName>CarTypes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>車種</label>
    <referenceTo>Mst_Models__c</referenceTo>
    <relationshipLabel>連携用オブジェクト</relationshipLabel>
    <relationshipName>WorkExchange_CarTypes</relationshipName>
    <type>Lookup</type>
</CustomField>