force-app/main/default/objects/WorkExchange__c/fields/ChangeLastName__c.field-meta.xml
<CustomField>
    <fullName>ChangeLastName__c</fullName>
    <label>姓変更</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>なし</fullName>
            </value>
            <value>
                <fullName>あり</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>