force-app/main/default/objects/WorkExchange__c/fields/Color_hs__c.field-meta.xml
<CustomField>
    <fullName>Color_hs__c</fullName>
    <label>色</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>パール系</fullName>
            </value>
            <value>
                <fullName>ホワイト系</fullName>
            </value>
            <value>
                <fullName>イエロー系</fullName>
            </value>
            <value>
                <fullName>オレンジ系</fullName>
            </value>
            <value>
                <fullName>レッド系</fullName>
            </value>
            <value>
                <fullName>ピンク系</fullName>
            </value>
            <value>
                <fullName>パープル系</fullName>
            </value>
            <value>
                <fullName>ブルー系</fullName>
            </value>
            <value>
                <fullName>グリーン系</fullName>
            </value>
            <value>
                <fullName>ブラウン系</fullName>
            </value>
            <value>
                <fullName>ベージュ系</fullName>
            </value>
            <value>
                <fullName>ゴールド系</fullName>
            </value>
            <value>
                <fullName>シルバー系</fullName>
            </value>
            <value>
                <fullName>グレー系</fullName>
            </value>
            <value>
                <fullName>ブラック系</fullName>
            </value>
            <value>
                <fullName>現車</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>