force-app/main/default/objects/WorkExchange__c/fields/CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>CompletionDate__c</fullName>
    <label>全完了日</label>
    <type>Date</type>
</CustomField>