force-app/main/default/objects/WorkExchange__c/fields/ContractCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>ContractCompletedDate__c</fullName>
    <label>売契完了日</label>
    <type>Date</type>
</CustomField>