force-app/main/default/objects/WorkExchange__c/fields/CorporationName__c.field-meta.xml
<CustomField>
    <fullName>CorporationName__c</fullName>
    <label>法人名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>