force-app/main/default/objects/WorkExchange__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <description>買取商談</description>
    <label>作成日</label>
    <type>DateTime</type>
</CustomField>