force-app/main/default/objects/WorkExchange__c/fields/Desired_amount_hs__c.field-meta.xml
<CustomField>
    <fullName>Desired_amount_hs__c</fullName>
    <label>売り予想</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>