force-app/main/default/objects/WorkExchange__c/fields/Displacement__c.field-meta.xml
<CustomField>
    <fullName>Displacement__c</fullName>
    <label>排気量(cc)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>