force-app/main/default/objects/WorkExchange__c/fields/DocumentAttachmentShipping_Free__c.field-meta.xml
<CustomField>
    <fullName>DocumentAttachmentShipping_Free__c</fullName>
    <label>書類手続き備考</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>