force-app/main/default/objects/WorkExchange__c/fields/DocumentCompleteCheck__c.field-meta.xml
<CustomField>
    <fullName>DocumentCompleteCheck__c</fullName>
    <description>買取商談[DocumentOK__c]</description>
    <label>書類OK確認日</label>
    <type>Date</type>
</CustomField>