force-app/main/default/objects/WorkExchange__c/fields/Doors__c.field-meta.xml
<CustomField>
    <fullName>Doors__c</fullName>
    <label>ドア数</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3枚</fullName>
            </value>
            <value>
                <fullName>4枚</fullName>
            </value>
            <value>
                <fullName>5枚</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>