force-app/main/default/objects/WorkExchange__c/fields/EasyToContact_Timezone_hs__c.field-meta.xml
<CustomField>
    <fullName>EasyToContact_Timezone_hs__c</fullName>
    <label>連絡のつきやすい時間帯</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>