force-app/main/default/objects/WorkExchange__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <label>取引先Fax</label>
    <type>Phone</type>
</CustomField>