force-app/main/default/objects/WorkExchange__c/fields/FirstRegistration_Month_hs__c.field-meta.xml
<CustomField>
    <fullName>FirstRegistration_Month_hs__c</fullName>
    <label>初年度月</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1月</fullName>
            </value>
            <value>
                <fullName>2月</fullName>
            </value>
            <value>
                <fullName>3月</fullName>
            </value>
            <value>
                <fullName>4月</fullName>
            </value>
            <value>
                <fullName>5月</fullName>
            </value>
            <value>
                <fullName>6月</fullName>
            </value>
            <value>
                <fullName>7月</fullName>
            </value>
            <value>
                <fullName>8月</fullName>
            </value>
            <value>
                <fullName>9月</fullName>
            </value>
            <value>
                <fullName>10月</fullName>
            </value>
            <value>
                <fullName>11月</fullName>
            </value>
            <value>
                <fullName>12月</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>