force-app/main/default/objects/WorkExchange__c/fields/GradeText__c.field-meta.xml
<CustomField>
    <fullName>GradeText__c</fullName>
    <label>グレード</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>