force-app/main/default/objects/WorkExchange__c/fields/HerokuId__c.field-meta.xml
<CustomField>
    <fullName>HerokuId__c</fullName>
    <externalId>true</externalId>
    <label>HerokuID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>