force-app/main/default/objects/WorkExchange__c/fields/Id_Account__c.field-meta.xml
<CustomField>
    <fullName>Id_Account__c</fullName>
    <label>Id_取引先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>