force-app/main/default/objects/WorkExchange__c/fields/Id_CallA__c.field-meta.xml
<CustomField>
    <fullName>Id_CallA__c</fullName>
    <label>コールAカスタムオブジェクトID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>