force-app/main/default/objects/WorkExchange__c/fields/Id_Case__c.field-meta.xml
<CustomField>
    <fullName>Id_Case__c</fullName>
    <externalId>true</externalId>
    <label>買取受付カスタムオブジェクトID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>