force-app/main/default/objects/WorkExchange__c/fields/Id_Oppotunity__c.field-meta.xml
<CustomField>
    <fullName>Id_Oppotunity__c</fullName>
    <label>買取商談カスタムオブジェクトID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>