force-app/main/default/objects/WorkExchange__c/fields/IsSynchronized__c.field-meta.xml
<CustomField>
    <fullName>IsSynchronized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce同期済フラグ</label>
    <type>Checkbox</type>
</CustomField>