force-app/main/default/objects/WorkExchange__c/fields/Maker__c.field-meta.xml
<CustomField>
    <fullName>Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>メーカ</label>
    <referenceTo>Mst_Makers__c</referenceTo>
    <relationshipLabel>連携用オブジェクト</relationshipLabel>
    <relationshipName>WorkExchange_Maker</relationshipName>
    <type>Lookup</type>
</CustomField>