force-app/main/default/objects/WorkExchange__c/fields/Moving__c.field-meta.xml
<CustomField>
    <fullName>Moving__c</fullName>
    <label>引越</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0回</fullName>
            </value>
            <value>
                <fullName>1回</fullName>
            </value>
            <value>
                <fullName>2回以上</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>