force-app/main/default/objects/WorkExchange__c/fields/Name_Case__c.field-meta.xml
<CustomField>
    <fullName>Name_Case__c</fullName>
    <label>買取受付No.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>