force-app/main/default/objects/WorkExchange__c/fields/Name_kana__c.field-meta.xml
<CustomField>
    <fullName>Name_kana__c</fullName>
    <label>取引先名＿よみがな</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>