force-app/main/default/objects/WorkExchange__c/fields/NecessaryDocument__c.field-meta.xml
<CustomField>
    <fullName>NecessaryDocument__c</fullName>
    <label>必要書類</label>
    <length>255</length>
    <type>Text</type>
</CustomField>