force-app/main/default/objects/WorkExchange__c/fields/OldLotNo__c.field-meta.xml
<CustomField>
    <fullName>OldLotNo__c</fullName>
    <label>旧ロット番号</label>
    <length>7</length>
    <type>Text</type>
</CustomField>