force-app/main/default/objects/WorkExchange__c/fields/OppotunityPhase__c.field-meta.xml
<CustomField>
    <fullName>OppotunityPhase__c</fullName>
    <label>買取商談フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>受付</fullName>
            </value>
            <value>
                <fullName>保留</fullName>
            </value>
            <value>
                <fullName>買取</fullName>
            </value>
            <value>
                <fullName>全完了</fullName>
            </value>
            <value>
                <fullName>キャンセル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>