force-app/main/default/objects/WorkExchange__c/fields/Option_hs__c.field-meta.xml
<CustomField>
    <fullName>Option_hs__c</fullName>
    <label>装備部品等</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ナビ</fullName>
            </value>
            <value>
                <fullName>AW</fullName>
            </value>
            <value>
                <fullName>サンルーフ</fullName>
            </value>
            <value>
                <fullName>（右）電動スライドドア</fullName>
            </value>
            <value>
                <fullName>（左）電動スライドドア</fullName>
            </value>
            <value>
                <fullName>革シート</fullName>
            </value>
            <value>
                <fullName>フリップダウン</fullName>
            </value>
            <value>
                <fullName>ETC</fullName>
            </value>
            <value>
                <fullName>ドラレコ</fullName>
            </value>
            <value>
                <fullName>充電ケーブル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>