force-app/main/default/objects/WorkExchange__c/fields/Owner_Fullname__c.field-meta.xml
<CustomField>
    <fullName>Owner_Fullname__c</fullName>
    <label>所有者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>