force-app/main/default/objects/WorkExchange__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <label>所有権</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>なし</fullName>
            </value>
            <value>
                <fullName>あり</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>