force-app/main/default/objects/WorkExchange__c/fields/OwnershipRemark__c.field-meta.xml
<CustomField>
    <fullName>OwnershipRemark__c</fullName>
    <label>所有権備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>