force-app/main/default/objects/WorkExchange__c/fields/PersonEmail__c.field-meta.xml
<CustomField>
    <fullName>PersonEmail__c</fullName>
    <label>メール</label>
    <type>Email</type>
</CustomField>