force-app/main/default/objects/WorkExchange__c/fields/PersonMailingCity__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingCity__c</fullName>
    <label>市区郡(郵送先)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>