force-app/main/default/objects/WorkExchange__c/fields/PersonMailingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingPostalCode__c</fullName>
    <label>郵便番号(郵送先)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>