force-app/main/default/objects/WorkExchange__c/fields/PersonMailingState__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingState__c</fullName>
    <label>都道府県(郵送先)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>