force-app/main/default/objects/WorkExchange__c/fields/PersonMailingStreet__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingStreet__c</fullName>
    <label>町名・番地(郵送先)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>