force-app/main/default/objects/WorkExchange__c/fields/PersonMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>PersonMobilePhone__c</fullName>
    <label>携帯</label>
    <type>Phone</type>
</CustomField>