force-app/main/default/objects/WorkExchange__c/fields/PersonOtherCity__c.field-meta.xml
<CustomField>
    <fullName>PersonOtherCity__c</fullName>
    <label>市区郡(その他)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>