force-app/main/default/objects/WorkExchange__c/fields/PersonOtherPostalCode__c.field-meta.xml
<CustomField>
    <fullName>PersonOtherPostalCode__c</fullName>
    <label>郵便番号(その他)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>