force-app/main/default/objects/WorkExchange__c/fields/PersonOtherState__c.field-meta.xml
<CustomField>
    <fullName>PersonOtherState__c</fullName>
    <label>都道府県(その他)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>