force-app/main/default/objects/WorkExchange__c/fields/PersonOtherStreet__c.field-meta.xml
<CustomField>
    <fullName>PersonOtherStreet__c</fullName>
    <label>町名・番地(その他)</label>
    <type>TextArea</type>
</CustomField>