force-app/main/default/objects/WorkExchange__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>買取受付フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>受付</fullName>
            </value>
            <value>
                <fullName>保留</fullName>
            </value>
            <value>
                <fullName>引き継ぎ完了</fullName>
            </value>
            <value>
                <fullName>買取</fullName>
            </value>
            <value>
                <fullName>日程調整</fullName>
            </value>
            <value>
                <fullName>書類待ち</fullName>
            </value>
            <value>
                <fullName>後処理待ち</fullName>
            </value>
            <value>
                <fullName>全完了</fullName>
            </value>
            <value>
                <fullName>キャンセル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>